# CYCLEone

./: CYCLEone.drawio  Dockerfile  README.md
.github/workflows/: ci-cd.yaml
cli_tool/: pyproject.toml
cli_tool/data/: global_config.json
cli_tool/src/cycleon/: cmd.py
cli_tool/src/cycleon/network/: client.py
cli_tool/src/cycleon/network/adapter/: adapter.py
cli_tool/src/cycleon/network/interface/tcp/: client.py  common.py  server.py
cli_tool/src/cycleon/network/message/action/: action.py  module.py  process.py  simulator.py
cli_tool/src/cycleon/settings/: config.py  json.py  reader.py
cli_tool/test/config/: test_config.py
cli_tool/test/data/: config_test.json
cli_tool/test/network/tcp/: test_server_client.py
cycle_on-master/: README.md
cycle_on-master/cli_tool/src/cycleon/network/adapter/: json_over_tcp.py
cycle_on-master/cli_tool/src/cycleon/network/interface/: interface.py
cycle_on-master/cli_tool/src/cycleon/network/message/: request.py  response.py
cycle_on-master/cli_tool/src/cycleon/settings/: implementation.py
cycle_on-master/cli_tool/test/network/adapter/: test_json_over_tcp.py
cycle_on-master/cli_tool/test/network/message/: test_action.py  test_module.py  test_request.py  test_response.py
cycle_on-master/docker/installers/: clean_cache.sh  install_boost.sh  install_cmake.sh  install_python_modules.sh  update_cache.sh
cycle_on-master/service/src/: CMakeLists.txt
cycle_on-master/service/src/config/: json.hpp
cycle_on-master/service/src/message/: CMakeLists.txt  process.hpp  request.hpp  response.hpp  simulator.hpp
cycle_on-master/service/src/network/interface/tcp/: CMakeLists.txt  client.hpp  common.hpp  server.cc  server.hpp
cycle_on-master/service/src/processor/: CMakeLists.txt  echo.cc  echo.hpp  handler.cc  processor.hpp
cycle_on-master/service/src/runner/: child.cc  child.hpp  fake.cc  fake.hpp  module.hpp
cycle_on-master/service/src/server/: server.hpp
cycle_on-master/service/test/adapter/: adapter_test.cc
cycle_on-master/service/test/config/: CMakeLists.txt
cycle_on-master/service/test/data/: config_test.json
cycle_on-master/service/test/message/: action_test.cc  response_test.cc
cycle_on-master/service/test/runner/: CMakeLists.txt  child_test.cc  fake_test.cc
docker/installers/: install_essentials.sh
docs/: Terms_and_Definitions.md
service/: CMakeLists.txt
service/src/: service.cpp
service/src/config/: CMakeLists.txt  config.hpp  config_reader.cc  config_reader.hpp  implementation.hpp  json.cc
service/src/message/: action.hpp  module.hpp
service/src/network/adapter/: CMakeLists.txt  adapter.hpp  json_over_tcp.cc  json_over_tcp.hpp
service/src/network/interface/tcp/: client.cc  common.cc
service/src/processor/: handler.hpp
service/src/runner/: CMakeLists.txt
service/src/server/: CMakeLists.txt  server.cc
service/test/: CMakeLists.txt
service/test/adapter/: CMakeLists.txt
service/test/config/: config_test.cc
service/test/message/: CMakeLists.txt  request_test.cc
service/test/network/interface/: CMakeLists.txt  tcp_test.cc
service/test/processor/: CMakeLists.txt  echo_test.cc
service/test/server/: CMakeLists.txt  server_test.cc
workflows/: Blank 3.docx  ci-cd.txt
