[project]
name = "cycleon"
version = "0.0.1"
authors = [
  { name="Kirill Mitkovskii", email="kirill.mitkovskii@gmail.com" },
]
description = "CycleOn command line tool"
dependencies = [
    'importlib-metadata; python_version>"3.7"',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
cycleon = "cycleon:cmd.main"
